--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive website templates</a></section><section class="cid-qTkA127IK8 mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="cid-qTkA127IK8 mbr-parallax-background" id="header2-1">
 
     
 
@@ -233,7 +233,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="IHRy2rPqj7ShL+NWnLanwzvcqfuB+fIAC4dbbtSTuzC55IYc5z5nyXVtYbZmaazSNqDgNqOGxehbl5rENV0FYPZXOBmTtXNdyPYCcEvQMCpDMkc7iwdC6WZsosRqPAa+">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="C8DfDi7OVMTqDxX2KEo2pgIXuEK91DmhVEI7AhyBK8RDG0ViJOV+Lg6//NjhCnvk0IM1RpicrlbyM7DBWQkmxuzWkhlGlWXMc+ZKY1GUfmLXuU8ddPf5WxWBm/8zXG51">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Спасибо за заполнение анкеты!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
