--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="cid-qTkA127IK8 mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/q">free responsive web templates</a></section><section class="cid-qTkA127IK8 mbr-parallax-background" id="header2-1">
 
     
 
@@ -222,9 +222,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="title col-12 col-lg-8">
-                <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-2">
-                    КОНТАКТНАЯ ФОРМА
-                </h2>
+                <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-2">Готовы к сотрудничеству?!</h2>
                 <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-5">Вы можете написать нам любой вопрос касательно поставок нашей продукции. Мы отвечаем оперативно и по существу!</h3>
             </div>
         </div>
@@ -233,7 +231,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="C8DfDi7OVMTqDxX2KEo2pgIXuEK91DmhVEI7AhyBK8RDG0ViJOV+Lg6//NjhCnvk0IM1RpicrlbyM7DBWQkmxuzWkhlGlWXMc+ZKY1GUfmLXuU8ddPf5WxWBm/8zXG51">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="00KL4tLqdB3r++4oZMteI2kAffXMb0kbDqwnelDL44BwhwiR448pnrL1voQFUNMSkfvZv20s7FohfC2s/Www5SDdw1oO/f1P4kSW1RaMnAOYu9IspziIz8PxjDQepL1s">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Спасибо за заполнение анкеты!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -300,7 +298,7 @@
     
 
     <div class="container">
-        <div><!-- Filter --><!-- Gallery --><div class="mbr-gallery-row"><div class="mbr-gallery-layout-default"><div><div><div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Потрясающие"><div href="#lb-gallery1-f" data-slide-to="0" data-toggle="modal"><img src="assets/images/img-2542-30-03-18-06-17-960x720-800x600.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Отзывчивый"><div href="#lb-gallery1-f" data-slide-to="1" data-toggle="modal"><img src="assets/images/img-1443-28-03-18-03-39-1-960x720-800x600.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Творческий"><div href="#lb-gallery1-f" data-slide-to="2" data-toggle="modal"><img src="assets/images/img-2004-28-03-18-03-39-960x720-800x600.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Анимированный"><div href="#lb-gallery1-f" data-slide-to="3" data-toggle="modal"><img src="assets/images/img-2004-28-03-18-03-39-960x720-800x600.jpg" alt="" title=""><span class="icon-focus"></span></div></div></div></div><div class="clearfix"></div></div></div><!-- Lightbox --><div data-app-prevent-settings="" class="mbr-slider modal fade carousel slide" tabindex="-1" data-keyboard="true" data-interval="false" id="lb-gallery1-f"><div class="modal-dialog"><div class="modal-content"><div class="modal-body"><div class="carousel-inner"><div class="carousel-item"><img src="assets/images/img-2542-30-03-18-06-17-960x720.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/img-1443-28-03-18-03-39-1-960x720.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/img-2004-28-03-18-03-39-960x720.jpg" alt="" title=""></div><div class="carousel-item active"><img src="assets/images/img-2004-28-03-18-03-39-960x720.jpg" alt="" title=""></div></div><a class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#lb-gallery1-f"><span class="mbri-left mbr-iconfont" aria-hidden="true"></span><span class="sr-only">Previous</span></a><a class="carousel-control carousel-control-next" role="button" data-slide="next" href="#lb-gallery1-f"><span class="mbri-right mbr-iconfont" aria-hidden="true"></span><span class="sr-only">Next</span></a><a class="close" href="#" role="button" data-dismiss="modal"><span class="sr-only">Close</span></a></div></div></div></div></div>
+        <div><!-- Filter --><!-- Gallery --><div class="mbr-gallery-row"><div class="mbr-gallery-layout-default"><div><div><div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Потрясающие"><div href="#lb-gallery1-f" data-slide-to="0" data-toggle="modal"><img src="assets/images/img-1441-28-03-18-03-39-960x720-800x600.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Отзывчивый"><div href="#lb-gallery1-f" data-slide-to="1" data-toggle="modal"><img src="assets/images/img-1443-28-03-18-03-39-1-960x720-800x600.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Творческий"><div href="#lb-gallery1-f" data-slide-to="2" data-toggle="modal"><img src="assets/images/img-2004-28-03-18-03-39-960x720-800x600.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Анимированный"><div href="#lb-gallery1-f" data-slide-to="3" data-toggle="modal"><img src="assets/images/img-2542-30-03-18-06-17-960x720-800x600.jpg" alt="" title=""><span class="icon-focus"></span></div></div></div></div><div class="clearfix"></div></div></div><!-- Lightbox --><div data-app-prevent-settings="" class="mbr-slider modal fade carousel slide" tabindex="-1" data-keyboard="true" data-interval="false" id="lb-gallery1-f"><div class="modal-dialog"><div class="modal-content"><div class="modal-body"><div class="carousel-inner"><div class="carousel-item"><img src="assets/images/img-1441-28-03-18-03-39-960x720.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/img-1443-28-03-18-03-39-1-960x720.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/img-2004-28-03-18-03-39-960x720.jpg" alt="" title=""></div><div class="carousel-item active"><img src="assets/images/img-2542-30-03-18-06-17-960x720.jpg" alt="" title=""></div></div><a class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#lb-gallery1-f"><span class="mbri-left mbr-iconfont" aria-hidden="true"></span><span class="sr-only">Previous</span></a><a class="carousel-control carousel-control-next" role="button" data-slide="next" href="#lb-gallery1-f"><span class="mbri-right mbr-iconfont" aria-hidden="true"></span><span class="sr-only">Next</span></a><a class="close" href="#" role="button" data-dismiss="modal"><span class="sr-only">Close</span></a></div></div></div></div></div>
     </div>
 
 </section>
